--- a/index.html
+++ b/index.html
@@ -67,16 +67,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<nav class="link-effect-2" id="link-effect-2">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html"><span data-hover="Home">Home</span></a></li>
-						<li><a href="about.html"><span data-hover="About Us">About Us</span></a></li>
-						<li><a href="services.html"><span data-hover="Services">Services</span></a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span data-hover="Short Codes">Short Codes</span> <b class="caret"></b></a>
-							<ul class="dropdown-menu agile_short_dropdown">
-								<li><a href="icons.html">Web Icons</a></li>
-								<li><a href="typography.html">Typography</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html"><span data-hover="Contact Us">Contact Us</span></a></li>
+						<li><a href="index.html"><span data-hover="About Us">About Us</span></a></li>
+						<li><a href="index.html"><span data-hover="Services">Services</span></a></li>
+						
+						<li><a href="index.html"><span data-hover="Contact Us">Contact Us</span></a></li>
 					</ul>
 				</nav>
 			
